--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 					<h2 class="header__middle__h2">And find the perfect partner to fullfill it</h2>
 					<a href="#" class="header__middle__btn">Find your holiday partner</a>
 				</div>
-			</div> <!-- Кінець .container -->
+			</div>
 		</header>
 	  <div class="container">
 			<section class="steps">
 				<h3 class="steps__h3">How Urlaubsglück works?</h3>
-				<div class="steps__blocks step1"> <!-- Перший .steps__block -->
+				<div class="steps__blocks step1">
 					<div class="steps__blocks__arrows" id="arrows__b1">
 						<span class="steps__blocks__left__arrow"></span>
 						<span class="steps__blocks__right__arrow"></span>
@@ -44,13 +44,13 @@
 						</span>
 					</div>
 			</div>
-			<div class="steps__blocks step2"> <!-- Другий .steps__block -->
+			<div class="steps__blocks step2">
 					<div class="steps__blocks__arrows" id="arrows__b2">
 						<span class="steps__blocks__left__arrow"></span>
 						<span class="steps__blocks__right__arrow"></span>
 					</div>
 				<div class="clearfix"></div>
-				<div class="steps__blocks__info show-cell" id="2block__info1"> <!-- 1 Слайд -->
+				<div class="steps__blocks__info show-cell" id="2block__info1">
 					<div class="red-table">Step 2</div>
 					<span class="info__title">Morbi velit risus</span>
 					<span class="info__desription">
@@ -59,13 +59,13 @@
 				
 				</div>
 			</div>
-			<div class="steps__blocks step3"> <!-- Третій .steps__block -->
+			<div class="steps__blocks step3">
 					<div class="steps__blocks__arrows" id="arrows__b3">
 						<span class="steps__blocks__left__arrow"></span>
 						<span class="steps__blocks__right__arrow"></span>
 					</div>
 					<div class="clearfix"></div>
-					<div class="steps__blocks__info show-cell" id="3block__info1"> <!-- 1 Слайд -->
+					<div class="steps__blocks__info show-cell" id="3block__info1">
 						<div class="red-table">Step 3</div>
 						<span class="info__title">Sed leo enim, condimentum</span>
 						<span class="info__desription">
@@ -166,7 +166,7 @@
 					<input type="text" class="search__input" placeholder="Enter your interests">
 					<button class="search__btn">Search partners</button>
 				</form>
-			</section> <!-- Кінець .search -->
+			</section>
 	</div>
 	</div>
 		</div>
